src/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Main_Competitor__c</fullName>
        <formula>Opportunity__r.MainCompetitors__c</formula>
        <label>Opportunity Main Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>SC 11/13/2012 VP of Ops</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Shipper__c</fullName>
        <description>SC 11/13/2012 VP of Ops</description>
        <label>Shipper</label>
        <picklist>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Cost__c</fullName>
        <description>SC 11/13/2012 VP of Ops</description>
        <inlineHelpText>Enter the total shipping cost here</inlineHelpText>
        <label>Shipping Cost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <description>SC 11/13/2012 VP of Ops</description>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>SC 11/13/2012 VP of Ops</description>
        <inlineHelpText>Enter tracking number here</inlineHelpText>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SHP-{0000}</displayFormat>
        <label>Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>